== master

* Fix transition args not being set when run in parallel
* Allow callback terminators to be set on an application-wide basis
* Only catch :halt during before / after transition callbacks
* Fix ActiveRecord predicates being overwritten if they're already defined in the class
* Allow machine options to be set on an integration-wide basis
* Turn transactions off by default in DataMapper integrations
* Add support for configuring the use of transactions
* Simplify reading/writing of attributes
* Simplify access to state machines via #state_machine(:attribute) without generating dupes
* Fix assumptions that dm-validations is always available in DataMapper integration
* Automatically define DataMapper properties for machine attributes if they don't exist
* Add Transition#qualified_event, #qualified_from_name, and #qualified_to_name
* Add #fire_events / #fire_events! for running events on multiple state machines in parallel
* Rename next_#{event}_transition to #{event}_transition
* Add #{attribute}_transitions for getting the list of transitions that can be run on an object
* Add #{attribute}_events for getting the list of events that can be fired on an object
* Use generated non-bang event when running bang version so that overriding one affects the other
* Provide access to arguments passed into an event from transition callbacks via Transition#args

== 0.6.3 / 2008-03-10

* Add support for customizing the graph's orientation
* Use the standard visualizations for initial (open arrow) and final (double circle) states
* Highlight final states in GraphViz drawings

== 0.6.2 / 2009-03-08

* Make it easier to override generated instance / class methods

== 0.6.1 / 2009-03-07

* Add i18n support for ActiveRecord validation errors
* Add a validation error when failing to transition for ActiveRecord / DataMapper / Sequel integrations

== 0.6.0 / 2009-03-03

* Allow multiple conditions for callbacks / class behaviors