@@ -281,12 +281,12 @@ begin
         assert called
       end
       
-      def test_should_pass_transition_and_result_into_after_callbacks_with_multiple_arguments
+      def test_should_pass_transition_into_after_callbacks_with_multiple_arguments
         callback_args = nil
         @machine.after_transition(lambda {|*args| callback_args = args})
         
         @transition.perform
-        assert_equal [@transition, true], callback_args
+        assert_equal [@transition], callback_args
       end
       
       def test_should_run_after_callbacks_with_the_context_of_the_record
@@ -434,7 +434,7 @@ begin
           assert !called
         end
         
-        def test_should_pass_transition_and_result_to_before_callbacks
+        def test_should_pass_transition_after_before_callbacks
           callback_args = nil
           
           observer = new_observer(@resource) do
@@ -444,7 +444,7 @@ begin
           end
           
           @transition.perform
-          assert_equal [@transition, true], callback_args
+          assert_equal [@transition], callback_args
         end
       end
       
